favicon and meta tags update

--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,31 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Explore apps developed for you." />
+  <meta name="description" content="Applications developed for you." />
+  <meta property="og:title" content="Muts.Dev" />
+  <meta property="og:description" content="Applications developed for you." />
+  <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon180.png" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Tmlab</title>
+  <title>Muts</title>
 </head>
 
 <body>
+
   <noscript>
-    <div style="font-size: 24px; width: 480px; max-width: 90vw; margin: 96px auto;">
-      <h1 style="font-size: 1.5em; color: red;">Ooops! JavaScript Required</h1>
+    <div style="font-family: sans-serif; font-size: 24px; 
+    width: 480px; max-width: 90vw; margin: 96px auto;">
+      <h1 style="font-size: 1.5em;">Ooops! JavaScript Required</h1>
       <p>
-        Seems like you enable JavaScript in your browser settings. You need to enable JavaScript to run this website.
+        Seems like you disabled JavaScript in your browser settings.
+        You need to enable JavaScript to run this website.
       </p>
     </div>
   </noscript>
+
   <div id="root"></div>
+
 </body>
 
 </html>
