--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Applications developed for you." />
-  <meta property="og:title" content="Muts.Dev" />
+  <meta name="description"
+    content="At Muts, we have developed cutting-edge software applications that empower businesses and individuals to thrive in today's digital age." />
+  <meta property="og:title" content="Muts" />
   <meta property="og:description" content="Applications developed for you." />
-  <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+  <meta property="og:image" href="%PUBLIC_URL%/logo.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon180.png" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
